[package]
name = "Arewave"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bytes = "1.7.2"
atoi = "2.0.0"
base64 = "0.13.0"
